--- a/components/synedit/languages/synedit.ca.po
+++ b/components/synedit/languages/synedit.ca.po
@@ -4,7 +4,7 @@ msgstr "%d - %d"
 
 #: syneditstrconst:syns_filterasm68hc11
 msgid "68HC11 Assembler Files (*.hc11,*.asm,*.asc)|*.HC11;*.ASM;*.ASC"
-msgstr "Fitxers d'assemblador 68HC11 (*.hc11,*.asm,*.asc)|*.HC11;*.ASM;*.ASC"
+msgstr "Fitxers de l'assemblador 68HC11 (*.hc11,*.asm,*.asc)|*.HC11;*.ASM;*.ASC"
 
 #: syneditstrconst:syns_shortcutnone
 msgid "<none>"
@@ -84,7 +84,7 @@ msgstr "HTML"
 
 #: syneditstrconst:syns_filterhtml
 msgid "HTML Document (*.htm,*.html)|*.htm;*.html"
-msgstr "Document HTML (*.htm,*.html)|*.htm;*.html"
+msgstr "Document d'HTML (*.htm,*.html)|*.htm;*.html"
 
 #: syneditstrconst:syns_filterini
 msgid "INI Files (*.ini)|*.ini"
@@ -96,11 +96,11 @@ msgstr "Fitxers de seqüència de configuració Inno (*.iss)|*.iss"
 
 #: syneditstrconst:syns_filterjava
 msgid "Java Files (*.java)|*.java"
-msgstr "Fitxers Java (*.java)|*.java"
+msgstr "Fitxers de Java (*.java)|*.java"
 
 #: syneditstrconst:syns_filterjscript
 msgid "Javascript Files (*.js)|*.js"
-msgstr "Fitxers Javascript (*.js)|*.js"
+msgstr "Fitxers de Javascript (*.js)|*.js"
 
 #: syneditstrconst:syns_filterkix
 msgid "KiXtart scripts (*.kix)|*.kix"
@@ -116,11 +116,11 @@ msgstr "Fitxers de lot MS-DOS (*.bat;*.cmd)|*.bat;*.cmd"
 
 #: syneditstrconst:syns_filtermodelica
 msgid "Modelica Files (*.mo)|*.mo"
-msgstr "Fitxers Modelica (*.mo)|*.mo"
+msgstr "Fitxers de Modelica (*.mo)|*.mo"
 
 #: syneditstrconst:syns_filtermodula3
 msgid "Modula-3 Files (*.m3)|*.m3"
-msgstr "Fitxers Modula-3 (*.m3)|*.m3"
+msgstr "Fitxers de Modula-3 (*.m3)|*.m3"
 
 #: syneditstrconst:syns_filtersyngenmsgfiles
 msgid "Msg files (*.msg)|*.msg"
@@ -128,7 +128,7 @@ msgstr "Fitxers Msg (*.msg)|*.msg"
 
 #: syneditstrconst:syns_filterphp
 msgid "PHP Files (*.php,*.php3,*.phtml,*.inc)|*.php;*.php3;*.phtml;*.inc"
-msgstr "Fitxers PHP (*.php,*.php3,*.phtml,*.inc)|*.php;*.php3;*.phtml;*.inc"
+msgstr "Fitxers de PHP (*.php,*.php3,*.phtml,*.inc)|*.php;*.php3;*.phtml;*.inc"
 
 #: syneditstrconst:syns_previewscrollinfofmt
 msgid "Page: %d"
@@ -136,19 +136,19 @@ msgstr "Pàgina: %d"
 
 #: syneditstrconst:syns_filterpascal
 msgid "Pascal Files (*.pas,*.dpr,*.dpk,*.inc)|*.pas;*.dpr;*.dpk;*.inc"
-msgstr "Fitxers Pascal (*.pas,*.dpr,*dpk,*.inc)|*.pas;*.dpr;*.dpk;*.inc"
+msgstr "Fitxers de Pascal (*.pas,*.dpr,*dpk,*.inc)|*.pas;*.dpr;*.dpk;*.inc"
 
 #: syneditstrconst:syns_filterperl
 msgid "Perl Files (*.pl,*.pm,*.cgi)|*.pl;*.pm;*.cgi"
-msgstr "Fitxers Perl (*.pl,*.pm,*.cgi)|*.pl;*.pm;*.cgi"
+msgstr "Fitxers de Perl (*.pl,*.pm,*.cgi)|*.pl;*.pm;*.cgi"
 
 #: syneditstrconst:syns_filterprogress
 msgid "Progress Files (*.w,*.p,*.i)|*.w;*.p;*.i"
-msgstr "Fitxers Progress (*.w,*.p,*.i)|*.w;*.p;*.i"
+msgstr "Fitxers de Progress (*.w,*.p,*.i)|*.w;*.p;*.i"
 
 #: syneditstrconst:syns_filterpython
 msgid "Python Files (*.py)|*.py"
-msgstr "Fitxers Python (*.py)|*.py"
+msgstr "Fitxers de Python (*.py)|*.py"
 
 #: syneditstrconst:syns_exporterformatrtf
 msgid "RTF"
@@ -160,11 +160,11 @@ msgstr "Rich Text Format (*.rtf)|*.rtf"
 
 #: syneditstrconst:syns_filtersql
 msgid "SQL Files (*.sql)|*.sql"
-msgstr "Fitxers SQL (*.sql)|*.sql"
+msgstr "Fitxers de SQL (*.sql)|*.sql"
 
 #: syneditstrconst:syns_filtersdd
 msgid "Semanta DD files (*.sdd)|*.sdd"
-msgstr "Fitxers Semanta DD (*.sdd)|*.sdd"
+msgstr "Fitxers de Semanta DD (*.sdd)|*.sdd"
 
 #: syneditstrconst:syns_eduplicateshortcut
 msgid "Shortcut already exists"
@@ -176,11 +176,11 @@ msgstr "Fitxers normalitzats ML (*.sml)|*.sml"
 
 #: syneditstrconst:syns_filtertcltk
 msgid "Tcl/Tk Files (*.tcl)|*.tcl"
-msgstr "Fitxers Tcl/Tk (*.tcl)|*.tcl"
+msgstr "Fitxers de Tcl/Tk (*.tcl)|*.tcl"
 
 #: syneditstrconst:syns_filtertex
 msgid "TeX Files (*.tex)|*.tex"
-msgstr "Fitxers TeX (*.tex)|*.tex"
+msgstr "Fitxers de TeX (*.tex)|*.tex"
 
 #: syneditstrconst:syns_duplicateshortcutmsg
 msgid "The keystroke \"%s\" is already assigned to another editor command. (%s)"
@@ -196,15 +196,15 @@ msgstr "Seqüències de l'intèrpret d'ordres UNIX (*.sh)|*.sh"
 
 #: syneditstrconst:syns_filtervbscript
 msgid "VBScript Files (*.vbs)|*.vbs"
-msgstr "Fitxers VBScript (*.vbs)|*.vbs"
+msgstr "Fitxers de VBScript (*.vbs)|*.vbs"
 
 #: syneditstrconst:syns_filtervisualbasic
 msgid "Visual Basic Files (*.bas)|*.bas"
-msgstr "Fitxers Visual Basic (*.bas)|*.bas"
+msgstr "Fitxers de Visual Basic (*.bas)|*.bas"
 
 #: syneditstrconst:syns_filterxml
 msgid "XML Document (*.xml,*.xsd,*.xsl,*.xslt,*.dtd)|*.xml;*.xsd;*.xsl;*.xslt;*.dtd"
-msgstr "Document XML (*.xml,*.xsd,*.xsl,*.xslt,*.dtd)|*.xml;*.xsd;*.xsl;*.xslt;*.dtd"
+msgstr "Document d'XML (*.xml,*.xsd,*.xsl,*.xslt,*.dtd)|*.xml;*.xsd;*.xsl;*.xslt;*.dtd"
 
 #: syneditstrconst:syns_filterx86asm
 msgid "x86 Assembly Files (*.asm)|*.ASM"
