--- a/languages/lazaruside.fr.po
+++ b/languages/lazaruside.fr.po
@@ -1,12 +1,13 @@
 msgid ""
 msgstr ""
-"Last-Translator: Alexandre Leclerc <aleclerc@hotmail.com>\n"
-"PO-Revision-Date: 2005-02-18 19:22+0500\n"
+"Last-Translator: beuz <vincent@beuselinck.com>\n"
+"PO-Revision-Date: 2005-04-24 18:47+0200\n"
 "Language-Team:  <fr@li.org>\n"
 "Content-Type: text/plain; charset=ISO-8859-15\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.0.2\n"
+"X-Generator: KBabel 1.3\n"
 "Project-Id-Version: lazaruside\n"
+"MIME-Version: 1.0\n"
 
 #: lazarusidestrconsts:lisdonotshowsplashscreen
 msgid "                      Do not show splash screen"
@@ -18,7 +19,7 @@ msgstr "                      Ne pas charger le dernier projet"
 
 #: lazarusidestrconsts:lisfilewheredebugoutputiswritten
 msgid "                      file, where debug output is written to. If it is not specified, debug output is written to the console."
-msgstr "                      fichier où les informations de déboguage sont écrites. Si n'est pas spécifié, ces information sont écrites sur la console."
+msgstr "                      fichier où les informations de déboguage sont écrites. Si ce n'est pas spécifié, ces informations sont écrites sur la console."
 
 #: lazarusidestrconsts:lisprimaryconfigdirectorywherelazarusstoresitsconfig
 msgid "                      primary config directory, where Lazarus stores its config files. Default is "
@@ -82,7 +83,7 @@ msgstr "%s%s%s n'est pas un nom de projet valide.%sVeuillez en choisir un autre 
 
 #: lazarusidestrconsts:lissvuoisnotavalididentifier
 msgid "%s%s%s is not a valid identifier."
-msgstr "%s%s%s n'est pas identificateur valide."
+msgstr "%s%s%s n'est pas un identificateur valide."
 
 #: lazarusidestrconsts:lisa2pisnotavalidunitname
 msgid "%s%s%s is not a valid unit name."
@@ -130,7 +131,7 @@ msgstr "%sAjout d'une nouvelle dépendance pour le projet %s: paquet %s%s"
 
 #: lazarusidestrconsts:lispkgmangbothpackagesareconnectedthismeanseitheronepackageu
 msgid "%sBoth packages are connected. This means, either one package uses the other, or they are both used by a third package."
-msgstr "%sLes deux paquets sont connectés. Soit l'un des paquet utilise l'autre, ou les deux sont utilisés pas un troisième paquet."
+msgstr "%sLes deux paquets sont connectés. Soit l'un des paquets utilise l'autre, ou les deux sont utilisés par un troisième paquet."
 
 #: lazarusidestrconsts:lisoipdescriptiondescription
 msgid "%sDescription:  %s"
@@ -298,7 +299,7 @@ msgstr "Action: %s"
 
 #: lazarusidestrconsts:lisactivateregularexpressionsyntaxfortextandreplaceme
 msgid "Activate regular expression syntax for text and replacement (pretty much like perl)"
-msgstr "Activer la syntaxe d'expression régulière pour texte et remplacement (très semblable à perl)"
+msgstr "Activer la syntaxe d'expression régulière pour du texte et remplacement (très semblable à perl)"
 
 #: lazarusidestrconsts:liscodetempladd
 msgid "Add"
@@ -362,11 +363,11 @@ msgstr "Ajouter un fichier au projet:"
 
 #: lazarusidestrconsts:lisprojaddfiles
 msgid "Add files"
-msgstr "Ajouter les fichers"
+msgstr "Ajouter les fichiers"
 
 #: lazarusidestrconsts:lisa2paddfilestopackage
 msgid "Add files to package"
-msgstr "Ajouter les fichers au paquet"
+msgstr "Ajouter les fichiers au paquet"
 
 #: lazarusidestrconsts:srkmecaddjumppoint
 msgid "Add jump point"
@@ -582,7 +583,7 @@ msgstr "Reconstruction automatique quand on reconstruit tout"
 
 #: lazarusidestrconsts:dlgautoren
 msgid "Auto rename file lowercase"
-msgstr ""
+msgstr "Renommer automatiquement les fichiers en minuscule"
 
 #: lazarusidestrconsts:dlgautosave
 msgid "Auto save"
@@ -626,7 +627,7 @@ msgstr "Retour"
 
 #: lazarusidestrconsts:dlgbackcolor
 msgid "Background"
-msgstr ""
+msgstr "Arrière-plan"
 
 #: lazarusidestrconsts:srvk_back
 msgid "Backspace"
@@ -638,7 +639,7 @@ msgstr "Sauvegarde"
 
 #: lazarusidestrconsts:lisbackupfilefailed
 msgid "Backup file failed"
-msgstr "L'archivage du ficher a échoué"
+msgstr "L'archivage du fichier a échoué"
 
 #: lazarusidestrconsts:lisfrbackwardsearch
 msgid "Backward search"
@@ -830,11 +831,11 @@ msgstr "Ne peut copier le composant de niveau supérieur"
 
 #: lazarusidestrconsts:liscannotcreatefile
 msgid "Can not create file %s%s%s"
-msgstr "Impossible de créer le ficher %s%s%s"
+msgstr "Impossible de créer le fichier %s%s%s"
 
 #: lazarusidestrconsts:lispkgsyscannotregistercomponentswithoutunit
 msgid "Can not register components without unit"
-msgstr "Ne peut pas enregistrer des composants sans unité"
+msgstr "Ne peut enregistrer des composants sans unité"
 
 #: lazarusidestrconsts:liscanonlychangetheclassoftcomponents
 msgid "Can only change the class of TComponents."
@@ -898,7 +899,7 @@ msgstr "Fichiers modifiés:"
 
 #: lazarusidestrconsts:lisbddchangingthepackagenameorversionbreaksdependencies
 msgid "Changing the package name or version breaks dependencies. Should these dependencies be changed as well?%sSelect Yes to change all listed dependencies.%sSelect Ignore to break the dependencies and continue."
-msgstr "Le changement du nom ou de la version d'un paquet brise les dépendances. Est-ce que ces dépendances doivent êtres changées aussi?%s Oui pour modifier toutes les dépendances listées. %Ignorer pour briser les dépendances et continuer."
+msgstr "Le changement du nom ou de la version d'un paquet brise les dépendances. Est-ce que ces dépendances doivent être changées aussi?%s Oui pour modifier toutes les dépendances listées. %Ignorer pour briser les dépendances et continuer."
 
 #: lazarusidestrconsts:srkmecchar
 msgid "Char"
@@ -994,7 +995,7 @@ msgstr "La classe %s%s%s n'est pas une classe de composants référencée.%sIncapab
 
 #: lazarusidestrconsts:lisoifclassnotfound
 msgid "Class %s%s%s not found."
-msgstr ""
+msgstr "Classe %s%s%s non trouvée."
 
 #: lazarusidestrconsts:lisa2pclassnamealreadyexists
 msgid "Class Name already exists"
@@ -1614,7 +1615,7 @@ msgstr "Erreur du débogueur"
 
 #: lazarusidestrconsts:lisdebuggererrorooopsthedebuggerenteredtheerrorstate
 msgid "Debugger error%sOoops, the debugger entered the error state%sSave your work now !%sHit Stop, and hope the best, we're pulling the plug."
-msgstr "Erreur du débogeur%sLe débogeur est en état d'erreur%sEnregistrez votre travail maintenant!%sCliquez sur Stop et espérez; nous ne répondons plus de rien !"
+msgstr "Erreur du débogueur%sLe débogueur est en état d'erreur%sEnregistrez votre travail maintenant!%sCliquez sur Stop et espérez; nous ne répondons plus de rien !"
 
 #: lazarusidestrconsts:lisdebuggerinvalid
 msgid "Debugger invalid"
@@ -1646,7 +1647,7 @@ msgstr "Extension Pascal par défaut"
 
 #: lazarusidestrconsts:dlgdefvaluecolor
 msgid "Default value"
-msgstr ""
+msgstr "Valeur par défaut"
 
 #: lazarusidestrconsts:liscodetoolsdefsdefine
 msgid "Define"
@@ -1710,7 +1711,7 @@ msgstr "Supprimer un noeud"
 
 #: lazarusidestrconsts:lisdeleteoldfile
 msgid "Delete old file %s%s%s?"
-msgstr "Supprimer l'ancien ficher %s%s%s ?"
+msgstr "Supprimer l'ancien fichier %s%s%s ?"
 
 #: lazarusidestrconsts:lispkgmangdeleteoldpackagefile2
 msgid "Delete old package file %s%s%s?"
@@ -1862,7 +1863,7 @@ msgstr "Affichage (pas pour Win32; par exemple : 198.112.45.11:0, x.org:1, hydra
 
 #: lazarusidestrconsts:dlglnumsbct
 msgid "Display Line Numbers in Run-time Error Backtraces"
-msgstr "Afficher les numéros de lignes dans les traçages d'erreurs d'exécution"
+msgstr "Afficher les numéros de ligne dans les traçages d'erreurs d'exécution"
 
 #: lazarusidestrconsts:lisdistinguishbigandsmalllettersegaanda
 msgid "Distinguish big and small letters e.g. A and a"
