--- a/languages/lazaruside.nl.po
+++ b/languages/lazaruside.nl.po
@@ -3865,6 +3865,10 @@ msgstr ""
 msgid "Move Down"
 msgstr ""
 
+#: lazarusidestrconsts:lismenueditormovedown
+msgid "Move Down (or right)"
+msgstr ""
+
 #: lazarusidestrconsts:uemmoveeditorleft
 msgid "Move Editor Left"
 msgstr ""
@@ -3878,11 +3882,7 @@ msgid "Move Up"
 msgstr ""
 
 #: lazarusidestrconsts:lismenueditormoveup
-msgid "Move Up(left)"
-msgstr ""
-
-#: lazarusidestrconsts:lismenueditormovedown
-msgid "Move Up(right)"
+msgid "Move Up (or left)"
 msgstr ""
 
 #: lazarusidestrconsts:srkmecpagedown
